[package]
name = "chattam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
cursive = "0.20.0"
cursive-aligned-view = "0.6.0"
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
